--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -354,13 +354,13 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/MaintainPersonDoc" class="nav-link">
                                                 <i class="nav-icon fa fa-users-cog"></i>
                                                 <p>Maintain Peson Doc</p>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/UpdatePerson" class="nav-link">
                                                 <i class="nav-icon fa fa-user-edit"></i>
                                                 <p>Update Person</p>
                                             </a>
@@ -445,19 +445,19 @@
                                     </a>
                                     <ul class="nav nav-treeview">
                                         <li class="nav-item">
-                                            <a href="../Home/ReceiveInnbondCall" class="nav-link">
+                                            <a href="../Home/DeceasedRegister" class="nav-link">
                                                 <i class="nav-icon fa fa-user-injured"></i>
                                                 <p>Deceased Register</p>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/MaintainPersonDoc" class="nav-link">
                                                 <i class="nav-icon fa fa-users-cog"></i>
                                                 <p>Maintain Person Doc</p>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/UpdatePerson" class="nav-link">
                                                 <i class="nav-icon fa fa-user-edit"></i>
                                                 <p>Update Person</p>
                                             </a>
