--- a/CCMS/Views/Home/CallCenter.cshtml
+++ b/CCMS/Views/Home/CallCenter.cshtml
@@ -36,26 +36,24 @@
         <div class="row m-1">
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
-                    <a href="../Home/ReceiveInnbondCall">
+                    <a href="../Home/ReceiveInboundCall">
                         <img src="~/Content/assets/icons/inbond.png" style="width:120px;height:120px" />
-                        <h5 style="color: #28a745;">Receive Inbond Calls</h5>
+                        <h5 style="color: #28a745;">Receive Inbound Calls</h5>
                     </a>
                 </div>
 
             </div>
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
-                    <a href="../Home/Trust">
+                    <a href="../Home/LogOutboundCall">
                         <img src="~/Content/assets/icons/log_outbond.png" style="width:120px;height:120px" />
-                        <h5 style="color: #28a745;">Log on Outbond Calls</h5>
+                        <h5 style="color: #28a745;">Log an Outbound Calls</h5>
                     </a>
                 </div>
-                
-
             </div>
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
-                    <a href="../Home/Trust">
+                    <a href="../Home/AddLodgementBooking">
                         <img src="~/Content/assets/icons/add_lodge.png" style="width:120px;height:120px" />
                         <h5 style="color: #28a745;">Add Lodgement Booking</h5>
                     </a>
@@ -63,7 +61,7 @@
             </div>
             <div class="col-md-3 text-center ">
                 <div class="col-md-12 border">
-                    <a href="../Home/Trust">
+                    <a href="../Home/ChangeLodgementBooking">
                         <img src="~/Content/assets/icons/change_lodge.png" style="width:120px;height:120px" />
                         <h5 style="color: #28a745;">Change Lodgement Booking</h5>
                     </a>
@@ -75,7 +73,7 @@
         <div class="row m-1">
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
-                    <a href="../Home/Trust">
+                    <a href="../Home/ViewLodgementBookings">
                         <img src="~/Content/assets/icons/viewLodge.png" style="width:120px;height:120px" />
                         <h5 style="color: #28a745;">View Lodgement Booking</h5>
                     </a>
