--- a/CCMS/Views/Home/Index.cshtml
+++ b/CCMS/Views/Home/Index.cshtml
@@ -207,8 +207,8 @@
     <style>
         /*  .roundedB { width: 200px; height: 200px; border-radius: 50%; background-image: url('../Content/assets/icons/inbond.png'); background-position: 70% 50%; background-size: 130%; }*/
         .roundedB {
-            width: 150px;
-            height: 150px;
+            width: 250px;
+            height: 250px;
             border-radius: 50%;
             border: 1px solid #28a745 !important;
             /*background-image: url(../Content/assets/icons/inbond.png);*/
@@ -280,7 +280,7 @@
                         <img src="~/Content/assets/images/Tshiamiso_logo.svg" style="width:150px" />
                     </a>
                 </div>
-                <h2 style="color:#057a52;">CAS</h2>
+                <h2 style="color:#057a52;">Claims Administration System</h2>
             </div>
             <hr style="padding:50px;border-color:#057a52;" />
             <div class="container">
@@ -288,13 +288,13 @@
                     <div class="col-md-3 text-center">
                     </div>
                     <div class="col-md-3 text-center">
-                        <a href="../Doctor/Login">
+                        <a href="../Home/CCMS_Login">
                             <img src="~/Custon_Images/logo1.svg" class="roundedB" />
                         </a>
 
                         <div class="text-center">
 
-                            <a href="../Home/CCMS_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">CAS LOGIN</button></a>
+                            <a href="../Home/CCMS_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">TRUST LOGIN</button></a>
 
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                             <img src="~/Content/assets/images/undraw_QA_engineers_dg5p.svg" class="roundedB" />
                         </a>
                         <div class="text-center">
-                            <a href="../Home/Other_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">OTHER LOGIN</button></a>
+                            <a href="../Home/Other_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">MINER LOGIN</button></a>
 
                         </div>
                     </div>
