--- a/CCMS/Views/Home/ReceiveInboundCall.cshtml
+++ b/CCMS/Views/Home/ReceiveInboundCall.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "QueryByPerson";
+    ViewBag.Title = "ReceiveInboundCall";
     Layout = "~/Views/Shared/_LayoutCCMS.cshtml";
 }
 <style>
@@ -107,7 +107,7 @@
                 <div class="col-sm-4">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" style="text-decoration:none!important"></i>&nbsp;Call Center</a></li>
-                        <li class="breadcrumb-item active">Receive Inbond Calls</li>
+                        <li class="breadcrumb-item active">Receive Inbound Calls</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
