--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CCMS</title>
+    <title>CAS</title>
     <link rel="icon" href="../Content/assets/images/Tshiamiso_logo.svg" type="image/x-icon">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -377,13 +377,13 @@
                                     </a>
                                     <ul class="nav nav-treeview">
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/PrepareClaim" class="nav-link">
                                                 <i class="nav-icon fa fa-clipboard-list"></i>
                                                 <p>Prepare Claim</p>
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a href="../Home/Trust" class="nav-link">
+                                            <a href="../Home/ResolveCallcenterTicket" class="nav-link">
                                                 <i class="nav-icon fa fa-cog"></i>
                                                 <p>Resolve Call Center Ticket</p>
                                             </a>
@@ -552,9 +552,9 @@
                         </li>-->
                         <li class="nav-item">
                             <a href="../Home/CallCenter" class="nav-link">
-                                <i class="nav-icon fa fa-chart-line"></i>
+                                <i class="nav-icon fa fa-headset"></i>
                                 <p>
-                                    CallCenter
+                                    Call Center
                                     @*<i class="fas fa-angle-left right"></i>*@
                                 </p>
                             </a>
