--- a/CCMS/Views/Home/MaintainPersonDoc.cshtml
+++ b/CCMS/Views/Home/MaintainPersonDoc.cshtml
@@ -62,21 +62,20 @@
 <link rel="stylesheet" href="~/Content/dashboardNew/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
 <link rel="stylesheet" href="~/Content/dashboardNew/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
 <link rel="stylesheet" href="~/Content/dashboardNew/dist/css/adminlte.min.css">
-<div ng-controller="QuerybyPersonCntrl" ng-cloak style="height:auto;zoom:0.8!important">
+<div ng-controller="QuerybyPersonCntrl" ng-cloak style="height:auto;zoom:0.9!important">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
             <div class="row m-b-0">
-                <div class="col-sm-7" style="margin-top:-14px!important;margin-bottom:-11px!important;font-size:11pt!important">
+                <div class="col-sm-8" style="margin-top:-14px!important;margin-bottom:-11px!important;font-size:11pt!important">
                     <button ng-show="ShowPersonDetails" style="cursor:pointer!important" class="btn btn-sm btn-success-custom" ng-click="BacltoList()"><i class="fa fa-chevron-left"></i>&nbsp;Back to Search</button>
                     <span ng-show="ShowPersonDetails" style="font-weight:500">
                         <img src="~/Content/dashboardNew/dist/img/avatar5.png" width="50" height="50" class="img-thumbnail" /> &nbsp;CCMS No:<b class="text-success"> AP005082543</b> &nbsp;First name: <b class="text-success">MACHASE</b> &nbsp;Surname: <b class="text-success">HOPO</b>&nbsp;Industry No: <b class="text-success">W1085979</b>
                     </span>
                 </div><!-- /.col -->
-                <div class="col-sm-5">
+                <div class="col-sm-4">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" style="text-decoration:none!important"></i>&nbsp;Trust</a></li>
-                        <li class="breadcrumb-item active">Person</li>
+                        <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" style="text-decoration:none!important"></i>&nbsp;Person</a></li>
                         <li class="breadcrumb-item active">Maintain Person Doc</li>
                     </ol>
                 </div><!-- /.col -->
@@ -627,7 +626,7 @@
                                             <div class="card-header">
                                                 <h4 class="card-title">Document View</h4>
                                             </div>
-                                            <div class="card-body" style="height:400px!important">
+                                            <div class="card-body" style="height:420px!important">
                                                 <iframe src="~/Uploads/Inspection.pdf" width="100%" height="400px" ng-show="ShowIframe">
                                                 </iframe>
                                             </div>
