--- a/CCMS/Views/Home/CAS_Login.cshtml
+++ b/CCMS/Views/Home/CAS_Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>CCMS</title>
+    <title>CAS</title>
     <!-- Favicon-->
     <link rel="icon" href="../Content/assets/images/Tshiamiso_logo.svg" type="image/x-icon">
     <!-- Plugins Core Css -->
@@ -112,7 +112,7 @@
                         </a>
                     </div>
                     <span class="login100-form-title p-b-45 fagreen-custom">
-                        Other Login
+                        CAS
                     </span>
 
 
@@ -152,7 +152,7 @@
 
 
                     <div class="container-login100-form-btn mb-5">
-                        <a href="../Home/Dashboard" class="login100-form-btn" @*ng-click="isLoginLoding?'':Login(loginModel)"*@>
+                        <a href="../Home/CAS_Roles" class="login100-form-btn" @*ng-click="isLoginLoding?'':Login(loginModel)"*@>
                             Login
                         </a>@*<span class="fa fa-spin fa-spinner"></span>*@
                         </a>
@@ -162,15 +162,19 @@
             <span class="txt2">
                 or sign up using
             </span>
-        </div>*@
+        </div>
 
-                    @*<div class="login100-form-social flex-c-m">
-                        <a href="../home/index" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                            <i class="fa fa-home"></i>
-                        </a>
-                    </div>*@
+        <div class="login100-form-social flex-c-m">
+            <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+
+            <a href="#" class="login100-form-social-item flex-c-m bg2 m-r-5">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>*@
                 </form>
-                <div class="login100-more" style="background-image: url('../Content/assets/images/undraw_QA_engineers_dg5p.svg');">
+                <div class="login100-more" style=" background-image: url('../Custon_Images/logo1.svg');">
                 </div>
             </div>
         </div>
