--- a/CCMS/Views/Home/CallCenter.cshtml
+++ b/CCMS/Views/Home/CallCenter.cshtml
@@ -37,7 +37,7 @@
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/ReceiveInboundCall">
-                        <img src="~/Content/assets/icons/inbond.png" style="width:120px;height:120px" />
+                        <img src="~/Content/assets/icons/inbond.png" style="width:200px;height:150px" />
                         <h5 style="color: #28a745;">Receive Inbound Calls</h5>
                     </a>
                 </div>
@@ -46,7 +46,7 @@
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/LogOutboundCall">
-                        <img src="~/Content/assets/icons/log_outbond.png" style="width:120px;height:120px" />
+                        <img src="~/Content/assets/icons/log_outbond.png" style="width:200px;height:150px" />
                         <h5 style="color: #28a745;">Log an Outbound Calls</h5>
                     </a>
                 </div>
@@ -54,16 +54,16 @@
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/AddLodgementBooking">
-                        <img src="~/Content/assets/icons/add_lodge.png" style="width:120px;height:120px" />
-                        <h5 style="color: #28a745;">Add Lodgement Booking</h5>
+                        <img src="~/Content/assets/icons/add_lodge.png" style="width:200px;height:150px" />
+                        <h5 style="color: #28a745;">Add Booking</h5>
                     </a>
                 </div>
             </div>
             <div class="col-md-3 text-center ">
                 <div class="col-md-12 border">
                     <a href="../Home/ChangeLodgementBooking">
-                        <img src="~/Content/assets/icons/change_lodge.png" style="width:120px;height:120px" />
-                        <h5 style="color: #28a745;">Change Lodgement Booking</h5>
+                        <img src="~/Content/assets/icons/change_lodge.png" style="width:200px;height:150px" />
+                        <h5 style="color: #28a745;">Change Booking</h5>
                     </a>
                 </div>
 
@@ -74,33 +74,33 @@
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/ViewLodgementBookings">
-                        <img src="~/Content/assets/icons/viewLodge.png" style="width:120px;height:120px" />
-                        <h5 style="color: #28a745;">View Lodgement Booking</h5>
+                        <img src="~/Content/assets/icons/viewLodge.png" style="width:200px;height:150px" />
+                        <h5 style="color: #28a745;">View Bookings</h5>
                     </a>
                 </div>
             </div>
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
-                    <a href="../Home/Trust">
-                        <img src="~/Content/assets/icons/upload_documents.png" style="width:120px;height:120px" />
+                    <a href="../Home/AddDocumentstoTickets">
+                        <img src="~/Content/assets/icons/upload_documents.png" style="width:200px;height:150px" />
                         <h5 style="color: #28a745;">Add Documents to Tickets</h5>
                     </a>
                 </div>
 
             </div>
-            <div class="col-md-3 text-center">
+            @*<div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/Trust">
-                        <img src="~/Content/assets/icons/BME_booking.png" style="width:120px;height:120px" />
+                        <img src="~/Content/assets/icons/BME_booking.png" style="width:200px;height:150px" />
                         <h5 style="color: #28a745;">BME Booking</h5>
                     </a>
                 </div>
 
-            </div>
+            </div>*@
             <div class="col-md-3 text-center">
                 <div class="col-md-12 border">
                     <a href="../Home/QueryByPerson">
-                        <img src="~/Content/assets/icons/query_person.png" style="width:120px;height:120px" />
+                        <img src="~/Content/assets/icons/query_person.png" style="width:200px;height:150px" />
                         <h5 style="color: #28a745;">Query by Person</h5>
                     </a>
                 </div>
