--- a/CCMS/Views/Home/Index.cshtml
+++ b/CCMS/Views/Home/Index.cshtml
@@ -288,22 +288,22 @@
                     <div class="col-md-3 text-center">
                     </div>
                     <div class="col-md-3 text-center">
-                        <a href="../Home/CCMS_Login">
+                        <a href="../Home/CAS_Login">
                             <img src="~/Custon_Images/logo1.svg" class="roundedB" />
                         </a>
 
                         <div class="text-center">
 
-                            <a href="../Home/CCMS_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">TRUST LOGIN</button></a>
+                            <a href="../Home/CAS_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">TRUST LOGIN</button></a>
 
                         </div>
                     </div>
                     <div class="col-md-3  text-center">
-                        <a href="../Home/Other_Login">
+                        <a href="../Home/Miner_Login">
                             <img src="~/Content/assets/images/undraw_QA_engineers_dg5p.svg" class="roundedB" />
                         </a>
                         <div class="text-center">
-                            <a href="../Home/Other_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">MINER LOGIN</button></a>
+                            <a href="../Home/Miner_Login"><button class="btn btn-sm btn-success-custom" type="button" style="margin:10px;">MINER LOGIN</button></a>
 
                         </div>
                     </div>
