--- a/CCMS/Views/Home/CAS_Roles.cshtml
+++ b/CCMS/Views/Home/CAS_Roles.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>CCMS</title>
+    <title>CAS</title>
     <!-- Favicon-->
     <link rel="icon" href="../Content/assets/images/Tshiamiso_logo.svg" type="image/x-icon">
     <!-- Plugins Core Css -->
