--- a/CCMS/Views/Home/ViewLodgementBookings.cshtml
+++ b/CCMS/Views/Home/ViewLodgementBookings.cshtml
@@ -82,12 +82,12 @@
         <div class="container-fluid">
             <div class="row m-b-0">
                 <div class="col-sm-8" style="margin-top:-5px!important;margin-bottom:-11px!important;font-size:10pt!important">
-                    <b ng-show="ShowPersonDetails" style="cursor:pointer!important" class="mr-2 btn btn-sm btn-success-custom" ng-click="BacktoList()"><i class="fa fa-chevron-left"></i>&nbsp;Back to Search</b>                                      
+                    <b ng-show="ShowPersonDetails43" style="cursor:pointer!important" class="mr-2 btn btn-sm btn-success-custom" ng-click="BacktoList()"><i class="fa fa-chevron-left"></i>&nbsp;Back to Search</b>
                 </div><!-- /.col -->
                 <div class="col-sm-4">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" style="text-decoration:none!important"></i>&nbsp;Call Center</a></li>
-                        <li class="breadcrumb-item active">View Lodgement Booking</li>
+                        <li class="breadcrumb-item active">View Lodgement/BME Booking</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -107,6 +107,94 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-12 col-lg-3 mb-1">
+                                        <label>ID Type</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-list"></i>
+                                                </span>
+                                            </div>
+                                            <select class="form-control form-control-sm" name="id_type" ng-model="id_type" ng-change="changeIDType(id_type)">
+                                                <option value="">-- Make a selection --</option>
+                                                <option value="Industry Number">Industry Number</option>
+                                                <option value="RSA ID Number">RSA ID Number</option>
+                                                <option value="Passport Number">Passport Number</option>
+                                                <option value="Employee Number">Employee Number</option>
+                                                <option value="Company Number">Company Number</option>
+                                                <option value="Bureau Number">Bureau Number</option>
+                                                <option value="Foriegn ID Number">Foriegn ID Number</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>{{IdNumber}}</label>
+                                        <div class="input-group">
+                                            <input type="text" class="form-control form-control-sm">
+                                            <div class="input-group-append">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-sort-numeric-down"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>Surname</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-user"></i>
+                                                </span>
+                                            </div>
+                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>First Name</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-user"></i>
+                                                </span>
+                                            </div>
+                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>Bureau No</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-sort-numeric-down"></i>
+                                                </span>
+                                            </div>
+                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>Person Reference</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-sort-alpha-down"></i>
+                                                </span>
+                                            </div>
+                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
+                                        <label>Year of Birth</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="fa fa-calendar"></i>
+                                                </span>
+                                            </div>
+                                            <input type="text" datepicker2 class="form-control form-control-sm" placeholder="">
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-3 mb-1">
                                         <label>Booking Type</label>
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -121,6 +209,8 @@
                                             </select>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-12 col-lg-3 mb-1">
                                         <label>Site</label>
                                         <div class="input-group">
@@ -145,7 +235,7 @@
                                                     <i class="fa fa-calendar"></i>
                                                 </span>
                                             </div>
-                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                            <input type="text" datepicker2 class="form-control form-control-sm" placeholder="">
                                         </div>
                                     </div>
                                     <div class="col-12 col-lg-3 mb-1">
@@ -156,68 +246,26 @@
                                                     <i class="fa fa-calendar"></i>
                                                 </span>
                                             </div>
-                                            <input type="text" class="form-control form-control-sm" placeholder="">
+                                            <input type="text" datepicker2 class="form-control form-control-sm" placeholder="">
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12 col-lg-4 mb-1">
-                                    </div>
-                                    <div class="col-12 col-lg-4 mb-1 text-center">
+                                    <div class="col-12 col-lg-3 mb-1">
                                         <label></label>
                                         <div class="input-group">
                                             <button type="button" ng-click="SearchbyPerson()" style="width:100px!important" class="btn btn-sm btn-success-custom"><i class="fa fa-search"></i>&nbsp;Search</button>&nbsp;
                                             <button type="reset" class="btn btn-sm btn-danger-custom" style="width:100px!important"><i class="fa fa-print"></i>&nbsp;Print</button>
                                         </div>
                                     </div>
-                                    <div class="col-12 col-lg-4 mb-1">
-                                    </div>
                                 </div>
+
                             </div>
                         </div>
-                    </div>
-                </div>
-            </form>
-
-            <div ng-show="ShowPersonDetails">
-                <div class="card">
-                    <div class="card-header card-gray">
-                        <h3 class="card-title">Mon, 02 Aug 2021</h3>
-                    </div>
-                    <!-- /.card-header -->
-                    <div class="card-body">                        
-                        <div class="row">
-                            <div class="col-12 col-lg-12 mb-3" style="font-size:10pt!important">
-                                <div class="callout callout-info pt-1 pb-1" style="width:15%!important;float:left!important">
-                                    <b>Total slots</b>
-                                    <p>
-                                        <b class="text-success">15</b>
-                                    </p>
-                                </div>
-                                <div class="callout callout-info pt-1 pb-1" style="width:35%!important;float:left!important">
-                                    <b>Slots Allocated to Bookings (including priority)</b>
-                                    <p>
-                                        <b class="text-success">14 (0 priority / 14 manual / 0 waiting list)</b>
-                                    </p>
-                                </div>
-                                <div class="callout callout-info pt-1 pb-1" style="width:15%!important;float:left!important">
-                                    <b>Total Slots Booked</b>
-                                    <p>
-                                        <b class="text-success">2</b>
-                                    </p>
-                                </div>
-                                <div class="callout callout-info pt-1 pb-1" style="width:20%!important;float:left!important">
-                                    <b>Booked Slots Processed</b>
-                                    <p>
-                                        <b class="text-success">0</b>
-                                    </p>
-                                </div>
-                                <div class="callout callout-info pt-1 pb-1" style="width:15%!important;float:left!important">
-                                    <b>Walk-in Slots</b>
-                                    <p>
-                                        <b class="text-success">1</b>
-                                    </p>
-                                </div>
+                        <div class="card" ng-show="ShowPersonDetails">
+                            <div class="card-header">
+                                <h3 class="card-title"></h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body">
                                 <table class="table table-bordered" id="example1" width="100%" style="font-size:10pt!important">
                                     <thead>
                                         <tr style="background:#057a528c!important;font-size:10pt!important">
@@ -268,11 +316,12 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <!-- /.card-body -->
                         </div>
                     </div>
-                    <!-- /.card-body -->
                 </div>
-            </div>
+            </form>
+
         </div>
     </section>
     <!-- /.content -->
@@ -333,7 +382,7 @@
             "responsive": true, "lengthChange": false, "autoWidth": false,
             "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
         }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-        
+
         //$("#MedicalDone").DataTable({
         //    "responsive": true, "lengthChange": false, "autoWidth": false
         //}).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
