--- a/CCMS/Views/Home/ViewLodgementBookings.cshtml
+++ b/CCMS/Views/Home/ViewLodgementBookings.cshtml
@@ -377,7 +377,7 @@
 <script>
     $(function () {
         //alert();
-        $.noConflict();/////
+        $.noConflict();
         $("#example1").DataTable({
             "responsive": true, "lengthChange": false, "autoWidth": false,
             "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
